Fixed Gallery images on window resize
Added media query to fix images getting blurry when browser window gets too small.

--- a/One-Page Website/css/one_page_website.css
+++ b/One-Page Website/css/one_page_website.css
@@ -229,6 +229,7 @@ section {
 
 img {
   margin-bottom: -4px;
+  min-height: 167px;
 }
 
 .caption-container {
@@ -527,7 +528,7 @@ img.hover-shadow {
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 30px;
+  width: 65px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
@@ -593,6 +594,18 @@ img.hover-shadow {
 @media (min-width: 992px) {
   .container {
     width: 970px;
+  }
+}
+
+@media (max-width: 992px) {
+  .column {
+    width: fit-content;
+  }
+  .row {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -713,8 +726,7 @@ img.hover-shadow {
 
 .photo-container img {
   max-width: 100%;
-  width: 300px;
-  height: 169px;
+  max-height: 169px;
 }
 
 .photo-overlay {
